# CQN-AS-Franka

./: README.md  deploy_real_panda.py  run.txt
ARSQ-main/: README.md
ARSQ-main/d4rl/: .gitignore  pyproject.toml
ARSQ-main/d4rl/arsq_d4rl/alg/: cqn.py  cqn_utils.py  sqar.py
ARSQ-main/d4rl/arsq_d4rl/cfgs/: cqn.yaml  sqar.yaml
ARSQ-main/d4rl/arsq_d4rl/cfgs/env_cfg/: cm.yaml  cme.yaml  cmr.yaml  hm.yaml  (+5 more)
ARSQ-main/d4rl/arsq_d4rl/run/: base_run.py  cqn_run.py  sqar_run.py
ARSQ-main/d4rl/arsq_d4rl/util/: replay_buffer.py  sampler.py  util.py
ARSQ-main/rlbench/: .gitignore  pyproject.toml  set_env.sh
ARSQ-main/rlbench/arsq_rlb/alg/: cqn.py  sqar.py
ARSQ-main/rlbench/arsq_rlb/cfgs/: config_rlbench_sqar.yaml
ARSQ-main/rlbench/arsq_rlb/cfgs/rlbench_task/: basketball_in_hoop.yaml  insert_usb_in_computer.yaml  lamp_on.yaml  meat_on_grill.yaml  open_door.yaml  open_drawer.yaml  open_microwave.yaml  open_oven.yaml  phone_on_base.yaml  pick_up_cup.yaml  press_switch.yaml  put_books_on_bookshelf.yaml  put_money_in_safe.yaml  put_rubbish_in_bin.yaml  slide_block_to_target.yaml  stack_wine.yaml  sweep_to_dustpan.yaml  take_lid_off_saucepan.yaml  take_plate_off_colored_dish_rack.yaml  toilet_seat_up.yaml  turn_tap.yaml
ARSQ-main/rlbench/arsq_rlb/runner/: train_rlbench_sqar.py
ARSQ-main/rlbench/arsq_rlb/util/: logger.py  replay_buffer.py  utils.py
arsq_src/: __init__.py  cqn_utils.py  encoder.py  replay_buffer.py  sqar.py
simtoreal/: README.md  __init__.py  cameras.py  eval_real.py  franka.py  image_45.npy  myrun.txt  real_env.py  teleop.py  test.py  train_real.py
